Fully functional
Added date ranges and progress bar updates
Also forced column types in tablesaw